Fix blip overflow

--- a/webapp/style.css
+++ b/webapp/style.css
@@ -26,6 +26,7 @@ a {
 	height: 100%;
 	background-image: url("map.jpg");
 	background-size: 100% 100%;
+	overflow: hidden;
 }
 
 #server-name {
